lyricue (1:3.3.5-1) maverick; urgency=low
  * More work on songlist html output (LP#883368)

 -- Chris Debenham <chris@adebenham.com>  Mon, 09 Jan 2012 17:30:00 +1000

lyricue (1:3.3.4-1) maverick; urgency=low

  * Make toolbar buttons have text
  * Reformat songlist html output (LP#883368)
  * Change window titles for various file chooser dialogs (LP#887769)
  * More fixes for handling if no bibleDb installed (LP#882686)

 -- Chris Debenham <chris@adebenham.com>  Wed, 30 Nov 2011 17:30:00 +1000

lyricue (1:3.3.3-1) maverick; urgency=low

  * Fix html output of songlist
  * Allow lyricue to load even if bibleDb goes missing
  * Add apport bug reporting and menu option (LP#884335)

 -- Chris Debenham <chris@adebenham.com>  Wed, 3 Nov 2011 17:30:00 +1000

lyricue (1:3.3.2-1) maverick; urgency=low

  * Static Backgrounds now work for exporting
  * Remove hotkeys for Add/Delete/Edit song (LP#883406)

 -- Chris Debenham <chris@adebenham.com>  Mon, 31 Oct 2011 17:30:00 +1000

lyricue (1:3.3.1-1) maverick; urgency=low

  * Make export playlist work better (backgrounds still not working)

 -- Chris Debenham <chris@adebenham.com>  Mon, 31 Oct 2011 17:30:00 +1000

lyricue (1:3.3.0-1) maverick; urgency=low

  * Add ability to export playlist as PDF file

 -- Chris Debenham <chris@adebenham.com>  Fri, 28 Oct 2011 17:30:00 +1000

lyricue (1:3.2.4-1) maverick; urgency=low

  * Change "Overscan" To "Margin" in preferences (LP#665500)
  * Remove binmode setting when importing xmlz songlist (LP#877093)

 -- Chris Debenham <chris@adebenham.com>  Fri, 28 Oct 2011 17:30:00 +1000

lyricue (1:3.2.3-1) maverick; urgency=low

  * Pause video before destroying

 -- Chris Debenham <chris@adebenham.com>  Wed, 26 Oct 2011 17:30:00 +1000

lyricue (1:3.2.2-1) maverick; urgency=low

  * Swap gtk and gst initialisation order (fixes two-windows coming up on some
    installs

 -- Chris Debenham <chris@adebenham.com>  Mon, 24 Oct 2011 17:30:00 +1000

lyricue (1:3.2.1-1) maverick; urgency=low
