@@ -73,6 +73,7 @@ main (int argc, char *argv[])
     bindtextdomain (GETTEXT_PACKAGE, NULL);
     bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
     textdomain (GETTEXT_PACKAGE);
+    srand(time(NULL));
 
     g_type_init ();
     GError *error = NULL;
