@@ -1,4 +1,6 @@
 lyricue (1:3.3.5-1) maverick; urgency=low
+
+  * Add 'Random' transition
   * More work on songlist html output (LP#883368)
 
  -- Chris Debenham <chris@adebenham.com>  Mon, 09 Jan 2012 17:30:00 +1000
